test/types/unions/badVisit5.good
badVisit5.chpl:14: error: functor at index 0 cannot be called with an argument of type string
